--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 1.1.0 (2018-10-10)
 ------------------
-* Fixed import behavior
+* Fixed import behavior and added usage instructions.
 
 1.0.0 (2018-10-09)
 ------------------
